<resources>
	<string name="app_name" translatable="false">Hourplan</string>
	<string name="drawer_home">Home</string>
	<string name="drawer_timetable">Timetable</string>
	<string name="drawer_substitution">Substitution schedule</string>
	<string name="drawer_group_settings">Settings</string>
	<string name="drawer_subjects">Subjects</string>
	<string name="drawer_learning">Learning</string>

	<string name="yes">Yes</string>
	<string name="ok">OK</string>
	<string name="no">No</string>
	<string name="cancel">Cancel</string>
	<string name="show">Show</string>
	<string name="leave">Leave</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="monday">Monday</string>
	<string name="monday_short">Mon</string>
	<string name="tuesday">Tuesday</string>
	<string name="tuesday_short">Tue</string>
	<string name="wednesday">Wednesday</string>
	<string name="wednesday_short">Wed</string>
	<string name="thursday">Thursday</string>
	<string name="thursday_short">Thu</string>
	<string name="friday">Friday</string>
	<string name="friday_short">Fri</string>
	<string name="saturday">Saturday</string>
	<string name="saturday_short">Sat</string>
	<string name="sunday">Sunday</string>
	<string name="sunday_short">Sun</string>
	<string name="today">Today</string>
	<string name="tomorrow">Tomorrow</string>
	<string name="next_day">Next day</string>

	<string name="add_subject">Add subject</string>
	<string name="subject">Subject</string>
	<string name="deleted_subject">Deleted subject</string>
	<string name="room">Room</string>
	<string name="teacher">Teacher</string>
	<string name="select_color">Select color</string>
	<string name="field_cant_be_empty">Field can\'t be empty</string>
	<string name="subject_already_exists">This subject already exists</string>
	<string name="update_format">Update %s</string>
	<string name="edit_format">Edit %s</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="add_subject_to_format">Add subject to %s</string>
	<string name="save_changes">Save Changes</string>
	<string name="topic">Topic</string>
	<string name="new_topic">New topic</string>
	<string name="add_topic">Add topic</string>
	<string name="topic_already_exists">Topic already exists</string>
	<string name="question">Question</string>
	<string name="answer">Answer</string>
	<string name="extra_information">Extra Information</string>
	<string name="add">Add</string>
	<string name="added_format">Added %s</string>
	<string name="couldnt_add_format">Couldn\'t add %s</string>
	<string name="add_leave">Add and leave</string>
	<string name="confirm_delete_format">Are you sure you want to delete %s</string>
	<string name="confirm_leave">Are you sure you want to leave? Anyting you did\'nt add will be lost</string>
	<string name="add_with_camera">Add with camera</string>
	<string name="last_format">Last: %s</string>

	<string-array name="test_types">
		<item>Ask for Question</item>
		<item>Ask for Question and Answer</item>
		<item>Ask for Answer</item>
		<item>Duel</item>
	</string-array>

	<string name="say_the_answer">Say the answer</string>
	<string name="shame_go_and_learn_more">Shame\nGo home now and learn</string>
	<string name="both_won">You both won\n now be happy and stop learning</string>

	<string name="test_results">Test results</string>
	<string name="instantly_known">Instantly known</string>
	<string name="known_after_trys">Known after a few tries</string>
	<string name="not_known">Not known</string>

	<string name="permission_needed">Permission needed</string>
	<string name="camera_permission_needed">Camera permission needed</string>

	<string name="combine">Combine</string>
	<string name="nothing_selected">Nothing selected</string>
	
	<string name="error_waiting_for_model">Error:\n Waiting for the text recognition model
		to be downloaded, this can take some minutes, if this takes much longer try to update
		google play services</string>
	<string name="warning_nothing_found">Warning:\n Nothing found. Please try again</string>
	<string name="warning_no_photo_took">Warning:\n You haven\'t took a photo</string>

	<string name="select_topics_and_click_again">Select some topics and tap the button
		again to learn those topics</string>

	<string name="work_in_progress">Work in Progress</string>
	<string name="work_in_progress_long">Work in Progress \n(probably need much time)</string>

</resources>
