<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

		<com.google.android.material.tabs.TabLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/tabLayout"
				android:background="@color/colorPrimary"
				app:tabTextColor="@color/colorPrimaryVeryDark"
				app:tabSelectedTextColor="@android:color/white" app:tabIndicatorColor="@android:color/white"
				app:tabRippleColor="@android:color/white">


			<com.google.android.material.tabs.TabItem
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/monday_short"
					android:id="@+id/MondayTab"/>

			<com.google.android.material.tabs.TabItem
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/tuesday_short"
					android:id="@+id/TuesdayTab"/>

			<com.google.android.material.tabs.TabItem
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/wednesday_short"
					android:id="@+id/WednesdayTab"/>

			<com.google.android.material.tabs.TabItem
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/thursday_short"
					android:id="@+id/ThursdayTab"/>

			<com.google.android.material.tabs.TabItem
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/friday_short"
					android:id="@+id/FridayTab"/>

		</com.google.android.material.tabs.TabLayout>

		<androidx.viewpager.widget.ViewPager
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/viewpager"
		>

		</androidx.viewpager.widget.ViewPager>
	</LinearLayout>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
			android:id="@+id/addButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:layout_gravity="bottom|end"
			android:src="@drawable/ic_add"
			app:rippleColor="#FFFFFF"
			android:visibility="invisible"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>