<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".learning.LearningAddTopicActivity" android:orientation="vertical">

	<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?attr/colorPrimary"
			android:minHeight="?attr/actionBarSize"
			android:theme="?attr/actionBarTheme"
			app:navigationIcon="@drawable/ic_arrow_back"
			app:title="@string/new_topic" />
	<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/text_input_topic"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:errorEnabled="true" android:layout_marginLeft="16dp" android:layout_marginTop="16dp"
			android:layout_marginRight="16dp">

		<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/topic"
				android:inputType="text"/>

	</com.google.android.material.textfield.TextInputLayout>
	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/add_button"
			android:text="@string/add_topic"/>

</LinearLayout>