<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		tools:context=".learning.LearningTestResultActivity">

	<androidx.appcompat.widget.Toolbar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?attr/colorPrimary"
			android:theme="?attr/actionBarTheme"
			android:minHeight="?attr/actionBarSize"
			android:id="@+id/toolbar"
			app:title="@string/test_results"/>

	<ViewFlipper
			android:id="@+id/viewFlipper"
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:inAnimation="@anim/slide_in_right"
			android:outAnimation="@anim/slide_out_left"
	>
		<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent" android:gravity="center">

			<androidx.cardview.widget.CardView
					android:id="@+id/buttonInstant"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="4dp"
					app:cardBackgroundColor="@color/colorRight"
					app:cardCornerRadius="4dp">

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="vertical">

					<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/instantly_known"
							android:textColor="@android:color/white"
							android:textSize="32sp" />

					<TextView
							android:id="@+id/textInstant"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_gravity="bottom"
							android:layout_margin="4dp"
							android:textColor="#CCFFFFFF"
							android:textSize="16sp"
							tools:text="999" />
				</LinearLayout>
			</androidx.cardview.widget.CardView>

			<androidx.cardview.widget.CardView
					android:id="@+id/buttonFewTries"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="4dp"
					app:cardBackgroundColor="@color/colorRetry"
					app:cardCornerRadius="4dp">

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="vertical">

					<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/known_after_trys"
							android:textColor="@android:color/white"
							android:textSize="32sp" />

					<TextView
							android:id="@+id/textFewTries"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_gravity="bottom"
							android:layout_margin="4dp"
							android:textColor="#CCFFFFFF"
							android:textSize="16sp"
							tools:text="999" />
				</LinearLayout>
			</androidx.cardview.widget.CardView>

			<androidx.cardview.widget.CardView
					android:id="@+id/buttonNotKnown"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="4dp"
					app:cardBackgroundColor="@color/colorWrong"
					app:cardCornerRadius="4dp">

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="vertical">

					<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/not_known"
							android:textColor="@android:color/white"
							android:textSize="32sp" />

					<TextView
							android:id="@+id/textNotKnown"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_gravity="bottom"
							android:layout_margin="4dp"
							android:textColor="#CCFFFFFF"
							android:textSize="16sp"
							tools:text="999" />
				</LinearLayout>
			</androidx.cardview.widget.CardView>

		</LinearLayout>
		<androidx.recyclerview.widget.RecyclerView
				android:layout_width="match_parent"
				android:layout_height="match_parent" android:id="@+id/recyclerViewWords"/>
	</ViewFlipper>
</LinearLayout>